--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="col-sm-12 col-lg-3 col-md-3">
                 <section class="content">
-                    <h3> Here is Your PickUP Lines</h3>
+                    <h3> Here is Your PickUP Line</h3>
                     <div class="quote-content">
                     
                     </div>
